--- a/index.html
+++ b/index.html
@@ -21,27 +21,34 @@
 
         <header class="row header-block">
             <nav class="nav-header">
-                <ul class="nav-header__list col-xs-12 col-sm-6 col-md-4 col-lg-3" >
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>More </li>
-                </ul>
-            </nav>
-            <nav class="nav-header">
-                <ul class="nav-header__list col-xs-12 col-sm-6 col-md-4 col-lg-3" >
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>More </li>
-                </ul>
-            </nav>
-            <nav class="nav-header">
-                <ul class="nav-header__list col-xs-12 col-sm-6 col-md-4 col-lg-3" >
+                <ul class="nav-header__list col-xs-12" >
                     <li>Home</li>
                     <li>About</li>
                     <li>More </li>
                 </ul>
             </nav>
         </header>
+        <div class="clearfix"></div>
+
+        <section class="row block-container-blogs">
+            
+            <div class="col-3 content-block">
+                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+                <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+            </div>
+
+            <div class="col-3 content-block">
+                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+                <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+            </div>
+
+            <div class="col-3 content-block">
+                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+                <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+            </div>
+            
+
+        </section>
 
 
 
