--- a/index.html
+++ b/index.html
@@ -30,23 +30,22 @@
         </header>
         <div class="clearfix"></div>
 
-        <section class="row block-container-blogs">
+        <section class="row block-container-blogs text-center">
             
-            <div class="col-lg-3 content-block">
+            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
                 <h2 class="content-block__content-title">Заголовок Контенту</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
             </div>
 
-            <div class="col-lg-3 col-lg-offset-1 content-block">
+            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
                 <h2 class="content-block__content-title">Заголовок Контенту</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
             </div>
 
-            <div class="col-lg-3 col-lg-offset-1 content-block">
+            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
                 <h2 class="content-block__content-title">Заголовок Контенту</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
             </div>
-            
 
         </section>
 
