--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         </header>
         <div class="clearfix"></div>
 
-        <section class="row block-container-blogs text-center">
+        <section class="row justify-content-end block-container-blogs">
             
             <div class="col-lg-3 col-md-6 col-xs-12 content-block">
                 <h2 class="content-block__content-title">Заголовок Контенту</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+
             </div>
 
             <div class="col-lg-3 col-md-6 col-xs-12 content-block">
@@ -49,6 +50,7 @@
 
         </section>
 
+        <!--    justify-content-center  -->
 
 
 
