--- a/index.html
+++ b/index.html
@@ -32,20 +32,22 @@
 
         <section class="row justify-content-end block-container-blogs">
             
-            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
-                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+            <div class="col-lg-3 col-md-5 col-xs-12 content-block">
+                <h2 class="content-block__content-title">Content Title</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
-
+                    <button class="btn btn-primary block-container-blogs__button-read-more" type="button">Button</button>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
-                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+            <div class="col-lg-3 col-md-5 col-xs-12 content-block">
+                <h2 class="content-block__content-title">Content Title</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+                <button class="btn btn-primary block-container-blogs__button-read-more" type="button">Button</button>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-xs-12 content-block">
-                <h2 class="content-block__content-title">Заголовок Контенту</h2>
+            <div class="col-lg-3 col-md-5 col-xs-12 content-block">
+                <h2 class="content-block__content-title">Content Title</h2>
                 <p class="content-block__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem repudiandae autem temporibus, tempora optio cupiditate unde. Aliquam expedita enim delectus earum, asperiores rem magni ipsam ab qui tenetur eius voluptas! </p>
+                <button class="btn btn-primary block-container-blogs__button-read-more" type="button">Button</button>
             </div>
 
         </section>
